packages/jsii/test/negatives/neg.enum-name.1.ts
///!MATCH_ERROR: Type names must use PascalCase: myEnum

export enum myEnum {
    FOO,
    GOO
}
